Fix hidden bottom links on ios

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100dvh;
   overflow: hidden;
 }
